# python-server-client

./: README.md  pyproject.toml  run_server_client.sh
server_client/: __main__.py  client.py  components.py  lib.py  mod.py  processors.py  server.py  systems.py  types.py
server_client/systems/: __init__.py  client_network.py  collision.py  game_time.py  input.py  movement.py  render.py  server_network.py  temp_entities.py  timer.py
